Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,18 +3,25 @@
 [access "refs/*"]
 	owner = group user/anuragpatle
 [access "refs/for/refs/*"]
+	read = group AnuragTestGroup
 	read = group user/anuragpatle
+	push = group AnuragTestGroup
 	push = group user/anuragpatle
 	label-Code-Review = -2..+2 group user/anuragpatle
 	label-Verified = -1..+1 group user/anuragpatle
 	rebase = group user/anuragpatle
 	removeReviewer = group user/anuragpatle
+	submit = group AnuragTestGroup
 	submit = group user/anuragpatle
 [access "refs/heads/*"]
+	read = group AnuragTestGroup
 	read = group user/anuragpatle
 	create = group user/anuragpatle
+	push = group AnuragTestGroup
 	push = +force group user/anuragpatle
+	pushMerge = group AnuragTestGroup
 	pushMerge = group user/anuragpatle
 [access "refs/tags/*"]
+	push = group AnuragTestGroup
 	push = group user/anuragpatle
 	push = +force group user/anuragpatle
